tests/reject/string_literal.alg
var s : Str;
axiom a s = "hello";
